<resources>
    <string name="app_name">EcoTips</string>
    <string name="first_project_name">Первые шаги</string>
    <string name="course">Курс</string>
    <string name="category_water_resorces">Ресурсосбережние</string>
    <string name="first_card">Экономим водные ресурсы</string>
    <string name="left_cards">Осталось карточек</string>
    <string name="curs_title">Курс</string>
    <string name="description">Описание</string>
    <string name="count_card">1</string>
    <string name="start_course">Начать обучение</string>
    <string name="courses_done">Пройденные курсы</string>
    <string name="sign_in">Вход</string>
    <string name="complete_btn">Завершить</string>
    <string name="welcome_to_ecotips">Добро пожаловать в EcoTips!</string>
    <string name="helloUser">Привет, </string>
    <string name="passwd">Пароль</string>
    <string name="email">Email</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="my_profile">Мой профиль</string>
    <string name="errorSignInWithEmail">Не получилось. Попробуйте еще раз!</string>
    <string name="errorSignInWithGoogle">Ошибка</string>
    <string name="title_activity_kotlin">KotlinActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="aviable_courses">Доступные курсы</string>
    <string name="current_course">Текущий курс</string>
    <string name="current_courses">Текущий курсы</string>
    <string name="finished_courses">Пройденные курсы</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="begin">Начать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="edit_profile">Редактирования профиля</string>
    <string name="finished_cards">Пройденные карточки</string>
    <string name="count_users_label">Количество человек&#13;&#10; на нашем борту:</string>
    <string name="mask_user_password">*******</string>

    <string name="request_sucessfull">Операция выполнена успешно</string>
    <string name="password_changed_success">Пароль изменен!</string>
    <string name="name_changed_success">Имя пользователя изменено!</string>
    <string name="mail_changed_success">Почта изменена!</string>
    <string name="count_users_format">%04d</string>
    <string name="google_sign_in">Продолжить с Google</string>
    <string name="left_cards_mask">Осталось %s</string>
    <string name="eco_label">ЭКО</string>
    <string name="hello_user_mask">Привет, %s!</string>
    <string name="registration_failed">Ошибка</string>
    <string name="registration_successful">Успешно</string>
    <string name="name_attach_error">Не получилось установить имя</string>
    <string name="remind_password"><u>Не помню пароль</u></string>
    <string name="no_account_ask">Нет аккаунта?</string>
    <string name="register">Зарегестрироваться</string>
    <string name="do_you_have_account_ask">Уже есть аккаунт?</string>
    <plurals name="left_card_plurals">
        <item quantity="zero">Все карточки пройдены!</item>
        <item quantity="one">Осталось %1$d карточка</item>
        <item quantity="two">Осталось %1$d карточки</item>
        <item quantity="few">Осталось %1$d карточки</item>
        <item quantity="many">Осталось %1$d карточек</item>
        <item quantity="other">%1$d карточки</item>
    </plurals>
    <string name="no_left_cards">Все карточки пройдены!</string>
    <string name="how_i_can_help">Как я могу помочь?</string>
    <string name="logout">Выйти</string>
    <string name="positive_text_for_user">Отличный день для того, чтобы узнать что-то новое!</string>
    <string name="why_it_possible_title">Почему это важно?</string>
    <string name="feedback">Обратная связь</string>
    <string name="contact_person_email">bboyzlodey@gmail.com</string>
    <string name="errorRegistration">Ошибка регистрации</string>
</resources>
