<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/curs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/bellota_bold"
            android:text="@string/curs_title"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />


        <skarlat.dev.ecoproject.customView.ProgressBarView
            android:id="@+id/progressOfCourse"
            android:layout_width="fill_parent"
            android:layout_height="7dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/custom_progressbar" />

        <TextView
            android:id="@+id/left_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/left_cards"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/course_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="6sp"
            android:text="@string/description"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:background="#B6B6B6" />

    </LinearLayout>


</FrameLayout>