<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/default_margin"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/default_margin"
                />

            <TextView
                android:id="@+id/signInTitle"
                style="?attr/textAppearanceHeadline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:text="@string/sign_in"
                app:layout_constraintStart_toStartOf="@id/startGuideLine"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/welcomeLabel"
                style="?attr/textAppearanceCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/welcome_to_ecotips"
                app:layout_constraintStart_toStartOf="@id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@id/signInTitle"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/colorBolotoButton"
                android:hint="@string/email"
                app:boxStrokeColor="@color/colorBolotoButton"
                app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                app:layout_constraintStart_toStartOf="@id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@id/welcomeLabel"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundTint="@color/colorBolotoButton"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_boloto"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/passwd"
                app:boxStrokeColor="@color/colorBolotoButton"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                app:layout_constraintStart_toStartOf="@id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_boloto"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/remindPassword"
                style="?attr/textAppearanceCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/remind_password"
                app:layout_constraintStart_toStartOf="@id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sign_in"
                style="@style/FabStyle.NextScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                app:layout_constraintTop_toTopOf="@id/remindPassword"
                />

            <skarlat.dev.ecoproject.customView.AdviceView
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@id/sign_in_google"
                app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                app:layout_constraintStart_toStartOf="@id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@id/sign_in"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintVertical_chainStyle="packed"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    >

                    <TextView
                        android:id="@+id/card_why_const"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account_ask"
                        android:textSize="16sp"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:id="@+id/why_readMore_const"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/bellota_bold"
                            android:text="@string/register"
                            android:textColor="@color/colorBolotoButton"
                            android:textSize="14sp"
                            />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="6dp"
                            android:src="@drawable/ic_vector_4"
                            />
                    </LinearLayout>
                </LinearLayout>
            </skarlat.dev.ecoproject.customView.AdviceView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_google"
                style="@style/GoogleSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/google_sign_in"
                android:theme="@style/ThemeOverlayGoogleSignIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                app:layout_constraintStart_toStartOf="@id/startGuideLine"
                app:layout_constraintTop_toBottomOf="@id/register"
                app:layout_constraintVertical_bias="1"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>
